# spl-vault-on-solana-anchor

./: Anchor.toml  README.md
programs/spl-vault/: Cargo.toml
programs/spl-vault/idls/: spl_vault.json
programs/spl-vault/src/: error.rs  events.rs  lib.rs  state.rs
programs/spl-vault/src/instructions/: close.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
programs/spl-vault/tests/: test_initialize.rs  vault_tests.rs
